--- a/BudgetApp2/Main.storyboard
+++ b/BudgetApp2/Main.storyboard
@@ -419,7 +419,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="eBf-xb-wEH">
-                        <barButtonItem key="leftBarButtonItem" image="Settings Filled (50px)" id="xlp-Hw-Zj8">
+                        <barButtonItem key="leftBarButtonItem" image="Settings Filled-20" id="xlp-Hw-Zj8">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <segue destination="tLk-yi-HVt" kind="show" id="g7Q-vf-t0a"/>
@@ -535,12 +535,12 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="qxO-WV-5iS">
                                 <rect key="frame" x="20" y="239" width="560" height="174"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UDz-iG-cQD">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UDz-iG-cQD" customClass="HoshiTextField" customModule="BudgetApp2" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ar-LZ-Dhe">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8ar-LZ-Dhe" customClass="HoshiTextField" customModule="BudgetApp2" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="48" width="560" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
@@ -912,7 +912,7 @@
         <image name="Calender(35x35)" width="35" height="35"/>
         <image name="EditFilled(10x10)" width="10" height="10"/>
         <image name="Price Tag USD Filled-50" width="50" height="50"/>
-        <image name="Settings Filled (50px)" width="38" height="38"/>
+        <image name="Settings Filled-20" width="20" height="20"/>
         <image name="arrows (2)" width="64" height="64"/>
         <image name="dollar(21x21)" width="21" height="21"/>
         <image name="plus(resized)" width="50" height="50"/>
